# AppJNI

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle  readme.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: chen-native-lib.cpp  chen_pa_com_nativeandroid_PAJni.h  com_jni_app_PAJni.h  native_lib.cpp
app/src/main/cpp/algorithm/: CMakeLists.txt  README.md  algorithm.c  algorithm.h
app/src/main/cpp/chen_algorithm/: CMakeLists.txt  chen_algorithm.c  chen_algorithm.h
app/src/main/cpp/chen_helloworld/: CMakeLists.txt  hello_world.c  hello_world.h
app/src/main/cpp/chen_subtraction/: CMakeLists.txt  chen_sub.c  chen_sub.h  readme
app/src/main/cpp/helloworld/: CMakeLists.txt  helloworld.c
app/src/main/cpp/include/: android_log_print.h  chen_math6.h  sub.h
app/src/main/cpp/subtraction/: CMakeLists.txt  READEME.md  sub.c
app/src/main/java/com/jni/app/: JNISetObj.java  MainActivity.java  PAJni.java  SampleJNIActivity.java
app/src/main/java/com/pa/chen/appjni/: JNISetObj.java  MainActivity.java  PAJni.java  SampleJNIActivity.java
app/src/main/res/layout/: activity_main.xml  activity_sample_jni.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
